tests/macro-tests/tests/expand/fail/non_existent_macro.rs
pub fn main() {
    non_existent_macro!();
}
